--- a/HQueue/common/config.ini
+++ b/HQueue/common/config.ini
@@ -21,6 +21,7 @@ timeout=30
 host=127.0.0.1:12000,127.0.0.1:12001
 timeout=259200
 
-[voice]
-displayFormateDefault = "请%s到%s就诊"
-voiceFormateDefault = "请%s到%s就诊"
+[MQ]
+mqServer=192.168.17.187
+mqPort=1883
+mqKey=/exchange/topic/visitor/checkin/nanchan
