修改配置项注释

--- a/HQueue/common/config.ini
+++ b/HQueue/common/config.ini
@@ -6,22 +6,21 @@ user=root
 pass=123456
 
 [global]
+;头像存储的位置
 HeadPicPath=/var/www/html/upload_resource
+;头像URL前缀
 upload_http_base = http://192.168.17.187/upload_resource/
-backupTime=43200
-deadTime=432000
-currentDayOnly=1
-AutoSyncFinish=1
-integrateType=MQ
-
-
-timeout=30
+;支持数据输入的类型 VIEW,WEBSERVICE,MQ
+integrateType=WEBSERVICE
 
 [memcached]
 host=127.0.0.1:11211,127.0.0.1:11211
 timeout=259200
 
 [MQ]
+;MQ服务器地址
 mqServer=192.168.17.187
+;MQ端口
 mqPort=1883
+;MQ订阅关键字
 mqKey=/exchange/topic/visitor/checkin/nanchan
