修改 edit visitor

--- a/HQueue/common/config.ini
+++ b/HQueue/common/config.ini
@@ -1,9 +1,9 @@
 [database]
-host=192.168.11.138
-name=HisQueue_V1.4
+host=192.168.17.184
+name=HisQueue_temp
 port=3306
 user=root
-pass=clear!@#
+pass=123456
 
 [global]
 ;头像存储的位置
