平安打印消息发送

--- a/HQueue/common/config.ini
+++ b/HQueue/common/config.ini
@@ -11,7 +11,9 @@ HeadPicPath=/var/www/html/upload_resource
 ;头像URL前缀
 upload_http_base = http://192.168.11.138/upload_resource/
 ;支持数据输入的类型 VIEW,WEBSERVICE,MQ
-integrateType=WEBSERVICE
+integrateType=MQ
+;特定项目名称
+projectMark=PINGAN
 
 [memcached]
 host=127.0.0.1:11211,127.0.0.1:11211
