修正查询患者队列状态接口

--- a/HQueue/common/config.ini
+++ b/HQueue/common/config.ini
@@ -1,9 +1,9 @@
 [database]
-host=192.168.17.184
-name=HisQueue_temp
+host=192.168.11.138
+name=HisQueue_V1.4
 port=3306
 user=root
-pass=123456
+pass=clear!@#
 
 [global]
 ;头像存储的位置
@@ -11,7 +11,7 @@ HeadPicPath=/var/www/html/upload_resource
 ;头像URL前缀
 upload_http_base = http://192.168.11.138/upload_resource/
 ;支持数据输入的类型 VIEW,WEBSERVICE,MQ
-integrateType=MQ
+integrateType=WEBSERVICE
 ;特定项目名称
 projectMark=PINGAN
 
